# x13-seasonal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/x13_seasonal/: __init__.py  config.py  core.py
tests/: test_core.py
