[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x13-seasonal"
version = "0.1.0"
description = "Python wrapper for X-13ARIMA-SEATS seasonal adjustment"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
